force-app/main/default/objects/xDO_Agent_Script__c/xDO_Agent_Script__c.object-meta.xml
<CustomObject>
    <description>Mock Agentforce conversations with Agent Scripts</description>
    <label>Agent Mock Script</label>
    <nameField>
        <label>Agent Script Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Mock Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>