force-app/main/default/objects/xDO_Agent_Script__c/fields/xDO_Active__c.field-meta.xml
<CustomField>
    <fullName>xDO_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Activating this script will inactivate any other Agent Scripts.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>