force-app/main/default/objects/xDO_Agent_Script__c/fields/xDO_Karabiner_Elements_Script__c.field-meta.xml
<CustomField>
    <fullName>xDO_Karabiner_Elements_Script__c</fullName>
    <label>Karabiner Elements Script</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>