force-app/main/default/objects/xDO_Agent_Script__c/fields/xDO_Script__c.field-meta.xml
<CustomField>
    <fullName>xDO_Script__c</fullName>
    <description>A script between an agent and a user should clearly indicate who is speaking at each point.</description>
    <inlineHelpText>A script between an agent and a user should clearly indicate who is speaking at each point.</inlineHelpText>
    <label>Script</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>