force-app/main/default/objects/xDO_Agent_Script__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>xDO_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>